--- a/style.css
+++ b/style.css
@@ -5,33 +5,34 @@ body {
   color: #dfd8c8;
 }
 
-.contact-form {
-  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLdOrIfEgeQLuJLu8AdYyeTTggrwWMlpthAA&usqp=CAU);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  color: #41444b;
-}
-
 h1 {
   color: #bb5a5a;
   font-weight: bolder;
   font-family: 'Georgia', serif;
-  border: 2px solid #dfd8c8;
-  padding: 10px;
+  border: 2px solid #bb5a5a;
+  padding: 12px;
 }
 
-header{
+header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  /* border: 2px solid black; */
+  align-items: center;
+  height: 60px;
+  padding: 15px;
+  background-color: #dfd8c8;
+  /* box-sizing: border-box; */
 }
 
-/* The 'a' makes the links in nav beige */
+/* The 'a' changes the links color, this is the top nav bar*/
 nav a {
-  color: #dfd8c8;
+  color: #41444b;
   margin: 0 5px;
+}
+
+.footer-links a {
+  color: #dfd8c8;
 }
 
 a:hover {
@@ -43,7 +44,6 @@ h2{
 }
 
 section {
-  /*background-color: #dfd8c8;*/
   background: linear-gradient(to right,#dfd8c8, #bb5a5a);
   padding: 20px;
   margin-bottom: 20px;
@@ -61,13 +61,15 @@ section {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  justify-content: center;
 }
 
 .quad img {
-  max-width: 40%;
+  max-width: 45%;
   height: auto;
-  flex: 1 0 calc(50% - 10px);
+  flex: 1 0 calc(50% - 10px); /* keeps integrity of photo */
   margin-bottom: 10px;
+  border-radius: 5%;
 }
 
 aside {
@@ -85,4 +87,64 @@ footer {
 
 .container {
   width: 100vw
+}
+
+#submit:hover {
+  background-color: lightgrey;
+}
+
+#submit:active {
+  background-color: #41444b;
+}
+
+/* this makes the first line of every paragraph white, I don't like the styling but it's practice - shows on all pages but about */
+p::first-line{
+  color: whitesmoke;
+}
+
+.contact-form {
+  /* start background */
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLdOrIfEgeQLuJLu8AdYyeTTggrwWMlpthAA&usqp=CAU);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  /* end background */
+  color: #161a25;
+  /* border: 5px solid black; */
+  height: 250px;
+  padding: 15px;
+}
+
+.form-content {
+  /* border: 5px solid black; */
+  padding: 5px;
+}
+
+.submit-button {
+  display: flex;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 100%;
+  }
+}
+
+.headshot-container {
+  /* border: 5px solid black; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bio {
+  padding: 2%;
+  font-size: 1.5em;
+}
+
+.portrait {
+    max-width: 100%;
+    max-height:100%;
 }
